test/cases/compile_errors/implicit_semicolon-if-else-if_statement.zig
export fn entry() void {
    if(true) {} else if(true) {}
    var good = {};
    if(true) ({}) else if(true) ({})
    var bad = {};
    _ = good;
    _ = bad;
}

// error
//
// :4:37: error: expected ';' or 'else' after statement
